# fiddle-test-cov

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
codespeak/: __main__.py  cli.py
codespeak/coverage/: __init__.py  diff.py
docs/: 1_assignment.md  2_think.md  4_prototype.md  5_bench.md  6_coverage.md  7_next_steps.md  7_think.md  8_wrap_up.md  9_make_cli.md  swt-bench-paper.md
docs/3_research/: gemini_deep_research.md  gpt5_deep_research.md  grok_deep_research.md
evals/: github_repos.yaml  github_repos.yaml.example  github_repos_extended.yaml
prompts/: v2.md
scripts/: coverage_diff.py  run_coverage.py
src/codespeak/: __init__.py  __main__.py  cli.py
swt-bench/dev/: marshmallow-code__marshmallow-1343.md  marshmallow-code__marshmallow-1359.md  pvlib__pvlib-python-1072.md  pvlib__pvlib-python-1854.md  pydicom__pydicom-1694.md  pylint-dev__astroid-1196.md  pylint-dev__astroid-1268.md  pylint-dev__astroid-1866.md  pyvista__pyvista-4315.md  sqlfluff__sqlfluff-1733.md
swt-bench/test/: astropy__astropy-12907.md  astropy__astropy-14365.md  astropy__astropy-14995.md  django__django-11001.md  django__django-11019.md  django__django-11039.md  django__django-11049.md  django__django-11099.md  django__django-11179.md  django__django-11283.md  django__django-11422.md  django__django-11583.md  django__django-11797.md  django__django-11815.md  django__django-11848.md  django__django-11999.md  django__django-12113.md  django__django-12184.md  django__django-12284.md  django__django-12470.md  django__django-12708.md  django__django-12747.md  django__django-12856.md  django__django-12915.md  django__django-12983.md  django__django-13028.md  django__django-13158.md  django__django-13230.md  django__django-13265.md  django__django-13321.md  django__django-13447.md  (+127 more)
tests/: test_cli.py
(+144 files in other folders)
