[project]
name = "codespeak"
version = "0.1.0"
description = "Modern CLI tool for managing code evaluation workflows"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.scripts]
codespeak = "codespeak.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
